update tgl 25 desember

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                     <i class="bx bxs-chevron-right arrow more-arrow"></i>
                   </span>
                   <ul class="more-sub-menu sub-menu">
-                    <li><a href="how-we-work.html#">Savety & Environtment</a></li>
-                    <li><a href="how-we-work.html#">exemplarity</a></li>
-                    <li><a href="how-we-work.html#">unity & shcedule</a></li>
+                    <li><a href="how-we-work.html#savety-environtment">Savety & Environtment</a></li>
+                    <li><a href="how-we-work.html#Exemplarity">exemplarity</a></li>
+                    <li><a href="how-we-work.html#unity-shcedule">unity & shcedule</a></li>
                   </ul>
                 </li>
-                <li><a href="history.html#">Our Comitment</a></li>
+                <li><a href="history.html#comitment">Our Comitment</a></li>
                 <li><a href="our-team.html">Meet our Team</a></li>
                 <li class="more">
                   <span
@@ -309,7 +309,7 @@
           <div class="card-content">
             <h1>Civil Structure</h1>
             <p>The first place in use for the place of loading or place the goods will decline in fabrication .</p>
-            <a href="#"> <button class="tombol btn2">read more</button></a>
+            <a href="our-service.html#civil-structure"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
         <div class="slide col-lg-3 mb-3">
@@ -320,7 +320,7 @@
           <div class="card-content">
             <h1>Civil Maintenance</h1>
             <p>The fourth place in use finish as a primer to strengthen the steel structure has been completed in fabrication</p>
-            <a href="#"> <button class="tombol btn2">read more</button></a>
+            <a href="our-service.html#civil-maintenance"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
         <div class="slide col-lg-3 mb-3">
@@ -329,9 +329,9 @@
           </div>
 
           <div class="card-content">
-            <h1>Steel Struckture</h1>
+            <h1>Steel Structure</h1>
             <p>The third place in use as a storage area stock material adjacent to the warehouse PT .Yogma Wijaya Kusuma.</p>
-            <a href="#"> <button class="tombol btn2">read more</button></a>
+            <a href="our-service.html#steel-structure"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
         <div class="slide col-lg-3">
@@ -342,7 +342,7 @@
           <div class="card-content">
             <h1>Steel Maintenance</h1>
             <p>The fourth place in use finish as a primer to strengthen the steel structure has been completed in fabrication</p>
-            <a href="#"> <button class="tombol btn2">read more</button></a>
+            <a href="our-service.html#steel-maintenance"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
       </div>
