--- a/our-service.html
+++ b/our-service.html
@@ -26,8 +26,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <!-- My Style  -->
     <link rel="stylesheet" href="css/loader.css" />
-    <link rel="stylesheet" href="css/tempalte sub page.css" />
+    <link rel="stylesheet" href="css/content with slider.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/headiing text.css" />
 
     <!-- Logo Title Bar -->
     <link rel="icon" href="Assets/img/logo yogma biru.png" type="image/x-icon" />
@@ -70,12 +71,12 @@
                     <i class="bx bxs-chevron-right arrow more-arrow"></i>
                   </span>
                   <ul class="more-sub-menu sub-menu">
-                    <li><a href="how-we-work.html#">Savety & Environtment</a></li>
-                    <li><a href="how-we-work.html#">exemplarity</a></li>
-                    <li><a href="how-we-work.html#">unity & shcedule</a></li>
+                    <li><a href="how-we-work.html#savety-environtment">Savety & Environtment</a></li>
+                    <li><a href="how-we-work.html#Exemplarity">exemplarity</a></li>
+                    <li><a href="how-we-work.html#unity-shcedule">unity & shcedule</a></li>
                   </ul>
                 </li>
-                <li><a href="history.html#">Our Comitment</a></li>
+                <li><a href="history.html#comitment">Our Comitment</a></li>
                 <li><a href="our-team.html">Meet our Team</a></li>
                 <li class="more">
                   <span
@@ -91,7 +92,7 @@
               </ul>
             </li>
             <li>
-              <a href="#business">BUSINESS</a>
+              <a href="index.html#business">BUSINESS</a>
               <i class="bx bxs-chevron-down js-arrow arrow"></i>
               <ul class="js-sub-menu sub-menu">
                 <li class="more">
@@ -153,24 +154,30 @@
         </div>
       </div>
     </nav>
-
     <!-- Ahir navbar -->
 
     <!-- hero section -->
     <section id="hero-history" class="hero-history container-fluid">
       <div class="container">
-        <h1 data-aos="fade-up">
-          Our Services
-          <span>[]</span>
-        </h1>
-        <a data-aos="fade-up" href="our-team.html#careers">><button class="tombol btn2">button</button></a>
+        <div class="wrapper">
+          <p>Full-Service Contracting Solutions for Your Business:</p>
+          <div class="words">
+            <span>Civil Structure </span>
+            <span>Civil Maintenance </span>
+            <span>Steel Structure </span>
+            <span>Steel Maintenance </span>
+            <span>Civil Structure </span>
+          </div>
+          <p>, We've Got You Covered.</p>
+        </div>
+        <a data-aos="fade-up" href="our-team.html#careers"><button class="tombol btn2">button</button></a>
       </div>
     </section>
 
     <!-- ahir hero section  -->
 
-    <!-- history -->
-    <section id="history" href="#">
+    <!--  -->
+    <section class="page">
       <div class="container">
         <div class="line"></div>
         <div class="row mb-5 justify-content-between">
@@ -179,11 +186,146 @@
           </div>
           <div class="paragraf col-md-8" data-aos="fade-up">
             <p>
-              <span>PT. Yogma Wijaya Kusuma</span> has been established since 1999 and has developed into a PT. Yogma Wijaya Kusuma on December 1, 2014. This company is engaged in trading and services based on the fulfillment of the needs
-              for the procurement of construction service equipment. Our business is engaged in the repair of consumables and office equipment suppliers, building construction, renovation, maintenance, blacksmithing, etc. To provide the
-              best service to customers, we have a professional and qualified work team in the field of welding and painting that produces products according to orders, competitive prices and timely completion of work and delivery of goods.
-              For that we hope that if your company needs our company to handle the work in accordance with our field, we will try to solve it as best as possible with maximum results.
+              <span>Our service consists of four elements:</span> civil structure, civil maintenance, steel structure, and steel maintenance. Civil structure refers to the design and construction of buildings, bridges and other
+              infrastructure using concrete, brick and other materials. Civil maintenance involves the upkeep and repair of these structures to ensure their safety and functionality. Steel structure refers to the design and construction of
+              buildings, bridges and other infrastructure using steel as the primary material. Steel maintenance involves the upkeep and repair of these structures to ensure their safety and functionality. Overall, our service aims to
+              provide high-quality, reliable solutions for all your civil and steel construction needs.
             </p>
+          </div>
+        </div>
+      </div>
+      <div class="ourservice-content" id="civil-structure">
+        <div class="content-with-slider">
+          <div class="left">
+            <div class="half-image">
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/2.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/3.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/4.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/5.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/6.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/7.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/8.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/9.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/10.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/11.jpg" alt="" /></div>
+                </div>
+                <div class="swiper-button-next swiper-navBtn"></div>
+                <div class="swiper-button-prev swiper-navBtn"></div>
+                <div class="bullet-roll swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+          <div class="right">
+            <h1>civil structure</h1>
+            <p>
+              Our company specializes in providing a wide range of services related to civil structure. From design and engineering to construction and maintenance, we have the expertise and resources to handle any project, big or small.
+              Whether you need a new bridge built, a road repaired, or a building constructed, we have the experience and knowledge to deliver high-quality results. Our team of skilled professionals is committed to meeting the needs of our
+              clients, and we pride ourselves on our attention to detail and dedication to customer satisfaction. If you are in need of reliable and professional civil structure services, look no further than our company.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="ourservice-content2" id="civil-maintenance">
+        <div class="content-with-slider">
+          <div class="right">
+            <h1>civil maintenance</h1>
+            <p>
+              Our company specializes in providing a wide range of services related to civil maintenance. Whether you need routine maintenance or emergency repairs, we have the skills and resources to keep your civil structures in top
+              condition. Our team of experienced professionals is trained in all aspects of civil maintenance, including structural repairs, surface repairs, and preventative maintenance. We use only the highest-quality materials and
+              techniques to ensure that your structures are safe and reliable. We understand the importance of timely and efficient maintenance, and we strive to provide our clients with the best possible service. If you are in need of
+              reliable and professional civil maintenance services, look no further than our company.
+            </p>
+          </div>
+          <div class="left">
+            <div class="half-image">
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/2.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/3.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/4.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/5.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/6.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/7.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/8.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/9.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/10.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/11.jpg" alt="" /></div>
+                </div>
+                <div class="swiper-button-next swiper-navBtn"></div>
+                <div class="swiper-button-prev swiper-navBtn"></div>
+                <div class="bullet-roll swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="ourservice-content" id="steel-structure">
+        <div class="content-with-slider">
+          <div class="left">
+            <div class="half-image">
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/2.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/3.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/4.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/5.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/6.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/7.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/8.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/9.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/10.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/11.jpg" alt="" /></div>
+                </div>
+                <div class="swiper-button-next swiper-navBtn"></div>
+                <div class="swiper-button-prev swiper-navBtn"></div>
+                <div class="bullet-roll swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+          <div class="right">
+            <h1>steel structure</h1>
+            <p>
+              Our company specializes in providing a wide range of services related to steel structure. From design and engineering to construction and maintenance, we have the expertise and resources to handle any project, big or small.
+              Steel structures are strong, durable, and versatile, making them an ideal choice for a variety of applications. Whether you need a steel bridge, a steel building, or any other type of steel structure, we have the experience
+              and knowledge to deliver high-quality results. Our team of skilled professionals is committed to meeting the needs of our clients, and we pride ourselves on our attention to detail and dedication to customer satisfaction. If
+              you are in need of reliable and professional steel structure services, look no further than our company.ssional civil structure services, look no further than our company.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="ourservice-content2" id="steel-maintenance">
+        <div class="content-with-slider">
+          <div class="right">
+            <h1>steel maintenance</h1>
+            <p>
+              Our company specialized in providing a wide range of services related to steel maintenance. Whether you need routine maintenance or emergency repairs, we have the skills and resources to keep your steel structures in top
+              condition. Our team of experienced professionals is trained in all aspects of steel maintenance, including structural repairs, surface repairs, and preventative maintenance. We use only the highest-quality materials and
+              techniques to ensure that your structures are safe and reliable. We understand the importance of timely and efficient maintenance, and we strive to provide our clients with the best possible service. If you are in need of
+              reliable and professional steel maintenance services, look no further than our company.
+            </p>
+          </div>
+          <div class="left">
+            <div class="half-image">
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/2.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/3.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/4.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/5.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/6.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/7.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/8.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/9.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/10.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/11.jpg" alt="" /></div>
+                </div>
+                <div class="swiper-button-next swiper-navBtn"></div>
+                <div class="swiper-button-prev swiper-navBtn"></div>
+                <div class="bullet-roll swiper-pagination"></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -388,6 +530,7 @@
 
     <!-- my java script -->
     <script src="js/script.js"></script>
+    <script src="js/client slide copy.js"></script>
     <!-- google translate -->
 
     <script text="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
