--- a/project-TEL.html
+++ b/project-TEL.html
@@ -70,12 +70,12 @@
                     <i class="bx bxs-chevron-right arrow more-arrow"></i>
                   </span>
                   <ul class="more-sub-menu sub-menu">
-                    <li><a href="how-we-work.html#">Savety & Environtment</a></li>
-                    <li><a href="how-we-work.html#">exemplarity</a></li>
-                    <li><a href="how-we-work.html#">unity & shcedule</a></li>
+                    <li><a href="how-we-work.html#savety-environtment">Savety & Environtment</a></li>
+                    <li><a href="how-we-work.html#Exemplarity">exemplarity</a></li>
+                    <li><a href="how-we-work.html#unity-shcedule">unity & shcedule</a></li>
                   </ul>
                 </li>
-                <li><a href="history.html#">Our Comitment</a></li>
+                <li><a href="history.html#comitment">Our Comitment</a></li>
                 <li><a href="our-team.html">Meet our Team</a></li>
                 <li class="more">
                   <span
@@ -91,7 +91,7 @@
               </ul>
             </li>
             <li>
-              <a href="#business">BUSINESS</a>
+              <a href="index.html#business">BUSINESS</a>
               <i class="bx bxs-chevron-down js-arrow arrow"></i>
               <ul class="js-sub-menu sub-menu">
                 <li class="more">
@@ -646,6 +646,7 @@
 
     <!-- my java script -->
     <script src="js/script.js"></script>
+
     <!-- google translate -->
 
     <script text="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
