--- a/how-we-work.html
+++ b/how-we-work.html
@@ -26,8 +26,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <!-- My Style  -->
     <link rel="stylesheet" href="css/loader.css" />
-    <link rel="stylesheet" href="css/tempalte sub page.css" />
+    <link rel="stylesheet" href="css/content with slider.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/tempalte sub page.css" />
 
     <!-- Logo Title Bar -->
     <link rel="icon" href="Assets/img/logo yogma biru.png" type="image/x-icon" />
@@ -35,7 +36,7 @@
     <!-- Boxicons CDN Link -->
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
 
-    <title>How We Work | PT. Yogma Wijaya kusuma</title>
+    <title>How we Work | PT. Yogma Wijaya kusuma</title>
   </head>
   <body>
     <!-- loader -->
@@ -70,12 +71,12 @@
                     <i class="bx bxs-chevron-right arrow more-arrow"></i>
                   </span>
                   <ul class="more-sub-menu sub-menu">
-                    <li><a href="how-we-work.html#">Savety & Environtment</a></li>
-                    <li><a href="how-we-work.html#">exemplarity</a></li>
-                    <li><a href="how-we-work.html#">unity & shcedule</a></li>
+                    <li><a href="how-we-work.html#savety-environtment">Savety & Environtment</a></li>
+                    <li><a href="how-we-work.html#Exemplarity">exemplarity</a></li>
+                    <li><a href="how-we-work.html#unity-shcedule">unity & shcedule</a></li>
                   </ul>
                 </li>
-                <li><a href="history.html#">Our Comitment</a></li>
+                <li><a href="history.html#comitment">Our Comitment</a></li>
                 <li><a href="our-team.html">Meet our Team</a></li>
                 <li class="more">
                   <span
@@ -91,7 +92,7 @@
               </ul>
             </li>
             <li>
-              <a href="#business">BUSINESS</a>
+              <a href="index.html#business">BUSINESS</a>
               <i class="bx bxs-chevron-down js-arrow arrow"></i>
               <ul class="js-sub-menu sub-menu">
                 <li class="more">
@@ -158,31 +159,129 @@
 
     <!-- hero section -->
     <section id="hero-history" class="hero-history container-fluid">
-      <div class="container">
-        <h1 data-aos="fade-up">
-          How we
-          <span>Work</span>
-        </h1>
-        <a data-aos="fade-up" href="our-team.html#careers">><button class="tombol btn2">button</button></a>
+      <div class="container" id="app">
+        <div class="title">
+          <div class="title-inner">
+            <div class="judul1">Efficiency, quality, and professionalism:</div>
+            <div class="judul2">the cornerstone of how we work at</div>
+            <div class="judul3">PT. Yogma Wijaya Kusuma</div>
+          </div>
+        </div>
       </div>
     </section>
 
     <!-- ahir hero section  -->
 
-    <!-- history -->
-    <section id="history" href="#">
+    <!--  -->
+    <section class="page">
       <div class="container">
         <div class="line"></div>
         <div class="row mb-5 justify-content-between">
-          <div class="judul_history col-md-3 mb-3" data-aos="fade-up">
-            <h1>How we Work</h1>
+          <div class="judul_history col-md-4 mb-3" data-aos="fade-up">
+            <h1>HOW WE WORK</h1>
           </div>
           <div class="paragraf col-md-8" data-aos="fade-up">
+            <p></p>
+          </div>
+        </div>
+      </div>
+      <div class="ourservice-content">
+        <div class="content-with-slider" id="#savety-environtment">
+          <div class="left">
+            <div class="half-image">
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/2.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/3.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/4.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/5.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/6.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/7.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/8.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/9.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/10.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/11.jpg" alt="" /></div>
+                </div>
+                <div class="swiper-button-next swiper-navBtn"></div>
+                <div class="swiper-button-prev swiper-navBtn"></div>
+                <div class="bullet-roll swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+          <div class="right">
+            <h1>Commited to safety our worker & environtment</h1>
             <p>
-              <span>PT. Yogma Wijaya Kusuma</span> has been established since 1999 and has developed into a PT. Yogma Wijaya Kusuma on December 1, 2014. This company is engaged in trading and services based on the fulfillment of the needs
-              for the procurement of construction service equipment. Our business is engaged in the repair of consumables and office equipment suppliers, building construction, renovation, maintenance, blacksmithing, etc. To provide the
-              best service to customers, we have a professional and qualified work team in the field of welding and painting that produces products according to orders, competitive prices and timely completion of work and delivery of goods.
-              For that we hope that if your company needs our company to handle the work in accordance with our field, we will try to solve it as best as possible with maximum results.
+              Our company specializes in providing a wide range of services related to civil structure. From design and engineering to construction and maintenance, we have the expertise and resources to handle any project, big or small.
+              Whether you need a new bridge built, a road repaired, or a building constructed, we have the experience and knowledge to deliver high-quality results. Our team of skilled professionals is committed to meeting the needs of our
+              clients, and we pride ourselves on our attention to detail and dedication to customer satisfaction. If you are in need of reliable and professional civil structure services, look no further than our company.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="ourservice-content2" id="#Exemplarity">
+        <div class="content-with-slider">
+          <div class="right">
+            <h1>Commited to exemplarity</h1>
+            <p>
+              Our company specializes in providing a wide range of services related to civil maintenance. Whether you need routine maintenance or emergency repairs, we have the skills and resources to keep your civil structures in top
+              condition. Our team of experienced professionals is trained in all aspects of civil maintenance, including structural repairs, surface repairs, and preventative maintenance. We use only the highest-quality materials and
+              techniques to ensure that your structures are safe and reliable. We understand the importance of timely and efficient maintenance, and we strive to provide our clients with the best possible service. If you are in need of
+              reliable and professional civil maintenance services, look no further than our company.
+            </p>
+          </div>
+          <div class="left">
+            <div class="half-image">
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/2.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/3.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/4.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/5.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/6.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/7.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/8.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/9.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/10.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/11.jpg" alt="" /></div>
+                </div>
+                <div class="swiper-button-next swiper-navBtn"></div>
+                <div class="swiper-button-prev swiper-navBtn"></div>
+                <div class="bullet-roll swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="ourservice-content" id="#unity-shcedule">
+        <div class="content-with-slider">
+          <div class="left">
+            <div class="half-image">
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/2.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/3.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/4.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/5.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/6.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/7.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/8.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/9.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/10.jpg" alt="" /></div>
+                  <div class="swiper-slide"><img src="assets/project/ Pulp And Paper/2018 Repair Jetty Fender, lampung/11.jpg" alt="" /></div>
+                </div>
+                <div class="swiper-button-next swiper-navBtn"></div>
+                <div class="swiper-button-prev swiper-navBtn"></div>
+                <div class="bullet-roll swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+          <div class="right">
+            <h1>Commited to unity & shcedule on targeted</h1>
+            <p>
+              Our company specializes in providing a wide range of services related to steel structure. From design and engineering to construction and maintenance, we have the expertise and resources to handle any project, big or small.
+              Steel structures are strong, durable, and versatile, making them an ideal choice for a variety of applications. Whether you need a steel bridge, a steel building, or any other type of steel structure, we have the experience
+              and knowledge to deliver high-quality results. Our team of skilled professionals is committed to meeting the needs of our clients, and we pride ourselves on our attention to detail and dedication to customer satisfaction. If
+              you are in need of reliable and professional steel structure services, look no further than our company.ssional civil structure services, look no further than our company.
             </p>
           </div>
         </div>
@@ -377,6 +476,7 @@
     <script>
       AOS.init();
     </script>
+    <script src="https://codepen.io/shshaw/pen/QmZYMG.js"></script>
     <!-- swiper js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
@@ -388,6 +488,7 @@
 
     <!-- my java script -->
     <script src="js/script.js"></script>
+    <script src="js/client slide copy.js"></script>
     <!-- google translate -->
 
     <script text="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
