update logo partner

--- a/history.html
+++ b/history.html
@@ -194,78 +194,77 @@
           <div class="slide-track">
             <!-- 7 logo -->
             <div class="slide">
-              <img src="img/logo partner/1.png" alt="" />
+              <img src="img/logo partner/1.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/2.png" alt="" />
+              <img src="img/logo partner/2.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/3.png" alt="" />
+              <img src="img/logo partner/3.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/4.png" alt="" />
+              <img src="img/logo partner/4.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/5.png" alt="" />
+              <img src="img/logo partner/5.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/6.png" alt="" />
+              <img src="img/logo partner/6.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/7.png" alt="" />
+              <img src="img/logo partner/7.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/1.png" alt="" />
+              <img src="img/logo partner/8.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/2.png" alt="" />
+              <img src="img/logo partner/1.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/3.png" alt="" />
+              <img src="img/logo partner/2.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/4.png" alt="" />
+              <img src="img/logo partner/3.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/5.png" alt="" />
+              <img src="img/logo partner/4.jpg" alt="" />
             </div>
-
-            <!-- 7 logo doubled -->
+            <!-- doubeled -->
             <div class="slide">
-              <img src="img/logo partner/1.png" alt="" />
-            </div>
-            <div class="slide">
-              <img src="img/logo partner/2.png" alt="" />
+              <img src="img/logo partner/1.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/3.png" alt="" />
+              <img src="img/logo partner/2.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/4.png" alt="" />
+              <img src="img/logo partner/3.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/5.png" alt="" />
+              <img src="img/logo partner/4.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/6.png" alt="" />
+              <img src="img/logo partner/5.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/7.png" alt="" />
+              <img src="img/logo partner/6.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/1.png" alt="" />
+              <img src="img/logo partner/7.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/2.png" alt="" />
+              <img src="img/logo partner/8.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/3.png" alt="" />
+              <img src="img/logo partner/1.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/4.png" alt="" />
+              <img src="img/logo partner/2.jpg" alt="" />
             </div>
             <div class="slide">
-              <img src="img/logo partner/5.png" alt="" />
+              <img src="img/logo partner/3.jpg" alt="" />
+            </div>
+            <div class="slide">
+              <img src="img/logo partner/4.jpg" alt="" />
             </div>
           </div>
         </div>
