--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           </div>
           <div class="card-content">
             <h1>Civil Structure</h1>
-            <p>The first place in use for the place of loading or place the goods will decline in fabrication .</p>
+            <p>Our company specializes in providing a wide range of services related to civil structure. From design...</p>
             <a href="our-service.html#civil-structure"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
@@ -319,7 +319,7 @@
 
           <div class="card-content">
             <h1>Civil Maintenance</h1>
-            <p>The fourth place in use finish as a primer to strengthen the steel structure has been completed in fabrication</p>
+            <p>Our company specializes in providing a wide range of services related to civil maintenance...</p>
             <a href="our-service.html#civil-maintenance"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
@@ -330,7 +330,7 @@
 
           <div class="card-content">
             <h1>Steel Structure</h1>
-            <p>The third place in use as a storage area stock material adjacent to the warehouse PT .Yogma Wijaya Kusuma.</p>
+            <p>Our company specializes in providing a wide range of services related to steel structure...</p>
             <a href="our-service.html#steel-structure"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
@@ -341,7 +341,7 @@
 
           <div class="card-content">
             <h1>Steel Maintenance</h1>
-            <p>The fourth place in use finish as a primer to strengthen the steel structure has been completed in fabrication</p>
+            <p>Our company specialized in providing a wide range of services related to steel maintenance...</p>
             <a href="our-service.html#steel-maintenance"> <button class="tombol btn2">read more</button></a>
           </div>
         </div>
