--- a/our-team.html
+++ b/our-team.html
@@ -4,7 +4,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta name="description" content="Building the future, one project at a time with our amazing team!" />
+    <meta name="keywords" content="yogma wijaya kusuma, yogma, wijaya, kusuma, Perusahaan Kontraktor, Contrctor Company, contractor, kontraktor, steel, baja, civil, solid, team, amazing team" />
+    <meta name="author" content="PT. Yogma Wijaya Kusuma" />
+    <meta name="robots" content="index, follow, archive" />
+    <meta property="og:title" content="our team - PT. Yogma Wijaya Kusuma" />
+    <meta property="og:description" content="Building the future, one project at a time with our amazing team!" />
+    <meta property="og:image" content="https://github.com/multidimensi/multidimensi.github.io/blob/4efcb5e5e1980ddd0d99c569eb18b09a1264012e/img/img/logo%20yogma%20biru.png" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
     <!-- aos -->
@@ -36,12 +42,12 @@
     <!-- Boxicons CDN Link -->
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
 
-    <title>Our Team | PT. Yogma Wijaya kusuma</title>
+    <title>Our Team - PT. Yogma Wijaya Kusuma</title>
   </head>
   <body>
     <!-- loader -->
     <div class="loader" id="preloader">
-      <img src="img/img/logo yogma biru.png" alt="" />
+      <img src="img/img/logo yogma biru.png" alt="logo PT Yogma Wijaya Kusuma" />
       <div class="spinner"></div>
     </div>
     <!-- navbar -->
@@ -50,7 +56,7 @@
         <i class="bx bx-menu"></i>
         <div class="logo">
           <a href="index.html">
-            <img src="img/img/logo yogma.png" alt="" />
+            <img src="img/img/logo yogma.png" alt="logo PT Yogma Wijaya Kusuma" />
             <span> PT.Yogma Wijaya Kusuma </span></a
           >
         </div>
@@ -161,7 +167,7 @@
     <section id="hero-ourteam" class="hero-ourteam container-fluid">
       <div class="container">
         <h1 data-aos="fade-up">let's Meet our <br /><span> Amazing</span> team!!</h1>
-        <p>Lorem ipsum doloram amet culpa, necessitatibus nulla!</p>
+        <p>Building the future, one project at a time with our amazing team!</p>
         <a href="#careers">
           <button class="tombol btn2" data-aos="fade-up">join our team</button>
         </a>
@@ -852,7 +858,7 @@
         <div class="row justify-content-around">
           <div class="col-lg-5">
             <div class="logo-footer">
-              <a href="#hero"><img src="img/img/logo yogma.png" alt="" /></a>
+              <a href="#hero"><img src="img/img/logo yogma.png" alt="logo PT Yogma Wijaya Kusuma" /></a>
               <span>PT. Yogma Wijaya Kusuma</span>
             </div>
             <div class="social-links">
